--- a/MapEdit.vcxproj.filters
+++ b/MapEdit.vcxproj.filters
@@ -91,12 +91,6 @@
     <ClCompile Include="Graph.cpp">
       <Filter>Source Files\DataStructure\SystemData\Graph</Filter>
     </ClCompile>
-    <ClCompile Include="systemdata2.h">
-      <Filter>Header Files\DataStructure\SystemData</Filter>
-    </ClCompile>
-    <ClCompile Include="systemdata2.cpp">
-      <Filter>Source Files\DataStructure\SystemData</Filter>
-    </ClCompile>
     <ClCompile Include="SystemData.cpp">
       <Filter>Source Files\DataStructure\SystemData</Filter>
     </ClCompile>
@@ -120,13 +114,13 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files\DataStructure\SystemData\Graph</Filter>
     </ClInclude>
-    <ClInclude Include="MapDisplay.h">
-      <Filter>Header Files\Widget\MapEditTool\MapDisplay</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MapEditTool.h">
       <Filter>Header Files\Widget\MapEditTool</Filter>
+    </QtMoc>
+    <QtMoc Include="MapDisplay.h">
+      <Filter>Header Files\Widget\MapEditTool\MapDisplay</Filter>
     </QtMoc>
   </ItemGroup>
 </Project>
