--- a/MapEdit.vcxproj
+++ b/MapEdit.vcxproj
@@ -99,7 +99,17 @@
     <ClInclude Include="Macro.h" />
     <QtMoc Include="MapDisplay.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SystemData.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MapEdit.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\Tool.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource\qss\MapEditTool.qss" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
