--- a/MapEdit.vcxproj.filters
+++ b/MapEdit.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files\DataStructure\SystemData\Graph</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MapEditTool.h">
@@ -122,5 +125,20 @@
     <QtMoc Include="MapDisplay.h">
       <Filter>Header Files\Widget\MapEditTool\MapDisplay</Filter>
     </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="MapEdit.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource\Tool.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource\qss\MapEditTool.qss">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
