--- a/MapEdit.vcxproj.filters
+++ b/MapEdit.vcxproj.filters
@@ -97,6 +97,12 @@
     <ClCompile Include="MapDisplay.cpp">
       <Filter>Source Files\Widget\MapEditTool\MapDisplay</Filter>
     </ClCompile>
+    <ClCompile Include="a.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SimpleButton.cpp">
+      <Filter>Source Files\Widget\MapEditTool</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macro.h">
@@ -116,6 +122,9 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimpleButton.h">
+      <Filter>Header Files\Widget\MapEditTool</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
