--- a/MapEdit.vcxproj
+++ b/MapEdit.vcxproj
@@ -88,7 +88,6 @@
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="MapDisplay.cpp" />
     <ClCompile Include="Node.cpp" />
-    <ClCompile Include="SimpleButton.cpp" />
     <ClCompile Include="SystemData.cpp" />
     <QtRcc Include="Resource.qrc" />
     <QtMoc Include="MapEditTool.h" />
@@ -102,7 +101,7 @@
     <QtMoc Include="MapDisplay.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="SimpleButton.h" />
+    <ClInclude Include="SimpleButton.hpp" />
     <ClInclude Include="SystemData.h" />
   </ItemGroup>
   <ItemGroup>
