--- a/MapEdit.vcxproj.filters
+++ b/MapEdit.vcxproj.filters
@@ -100,9 +100,6 @@
     <ClCompile Include="a.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SimpleButton.cpp">
-      <Filter>Source Files\Widget\MapEditTool</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macro.h">
@@ -123,7 +120,7 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SimpleButton.h">
+    <ClInclude Include="SimpleButton.hpp">
       <Filter>Header Files\Widget\MapEditTool</Filter>
     </ClInclude>
   </ItemGroup>
